# kladvaljaren

./: README.md  pyproject.toml  se.danielnylander.kladvaljaren.desktop
.tx/: config
po/: kladvaljaren.pot  sv.mo  sv.po
src/kladvaljaren/: main.py
