[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "kladvaljaren"
version = "0.1.0"
description = "Choose clothes by weather for children"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]
[project.gui-scripts]
kladvaljaren = "kladvaljaren.main:main"
[tool.setuptools.packages.find]
where = ["src"]
